--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+* {
+	box-sizing: border-box;
+ }
+ 
+ body {
+  font-family: 'Quicksand', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+   max-width: 1170px;
+   width: 100%;
+   padding: 0 15px;
+   margin: 0 auto;
+ }
+
+header {
+  background-color:#ecf0f1;
+  height: 50px;
+  width: 100%;
+  position :fixed;
+  top: 0;
+  z-index: 10;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.top-wrapper {
+   padding: 180px 0 100px 0;
+   background-image: url(https://images.unsplash.com/photo-1470790376778-a9fbc86d70e2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=698&q=80);
+   background-size: cover;
+   color: white;
+   text-align: center;
+ }
+ 
+ .top-wrapper h1 {
+   opacity: 1;
+   font-size: 45px;
+   letter-spacing: 5px;
+   margin-bottom: 10px;
+ }
+ 
+ .top-wrapper p {
+   opacity: 0.7;
+   margin-bottom: 3px;
+ }
+
+.kiri{
+   float: left;
+   }
+   
+.logo {
+   width: 50px;
+   margin-top: 5px;
+   }
+       
+	
+.kanan{
+   float: right;
+   margin-right: -25px;
+	}
+
+.kanan a {
+   line-height: 65px;
+  padding: 0 25px;
+  color: #34495e;
+  display: block;
+  float: left;
+  transition: all 0.5s;
+}
+
+.kanan a:hover{
+   background-color: rgba(255, 255, 255, 0.3);
+}
+main {
+	overflow: auto;
+}
+
+form{
+  padding-left: 20em;
+}
+
+footer {
+	height: 10%;
+	padding: 10px;
+	color: white;
+	background-color:#34495e;
+	text-align: center;
+	font-weight: bold;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
